k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudvibes
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: "^https://www\\.cloudvibes\\.org/(.*)"
    traefik.ingress.kubernetes.io/redirect-replacement: "https://cloudvibes.org/$1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cloudvibes.org
        - www.cloudvibes.org
      secretName: cloudvibes-letsencrypt-tls
  rules:
    - host: cloudvibes.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudvibes
                port:
                  number: 80
    - host: www.cloudvibes.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudvibes
                port:
                  number: 80
